# Brown_Coursera

./: CMakeLists.txt  PriorityCollection.h  animals.h  database.h  hash_set.h  ini.cpp  ini.h  json.cpp  json.h  lazyvalue.h  main.cpp  node.h  objectpool.h  polynomial.h  stats_aggregator.cpp  stats_aggregator.h  stats_aggregator_test.cpp  synchronized.h  xml.cpp  xml.h
Cache/: common.cpp  common.h  library.h  test_cache.h
Comments server/: comment_server.cpp  comment_server.h  comment_server_test.h
ConcurrentMap/: concurrentmap.h
Double dispatching/: collide.cpp  collide.h  collide_test.h  geo2d.cpp
Lazy value/: lazyvalue.h  lazyvalue_test.h
Object pool/: objectpool.h  objectpool_test.h
Pipeline/: pipeline.h  pipeline_test.h
Polynomial/: polynomial.h  polynomial_test.h
Synchronized/: synchronized.h  synchronized_test.h
Textures/: canvas.h  common.cpp  common.h  test_textures.h  textures.cpp  textures.h
Tree expression/: common.h  test_expression.h
Trip manager/: booking.h  new_booking_providers.h  new_trip_manager.h  test_rall_booking.h
Unique ptr/: test_unique_ptr.h  unique_ptr.h
