cmake_minimum_required(VERSION 3.21)
project(Brown_Coursera)

set(CMAKE_CXX_STANDARD 17)

add_executable(Brown_Coursera main.cpp test_runner.h "Double dispatching/geo2d.h" "Double dispatching/geo2d.cpp" "Double dispatching/game_object.h" "Double dispatching/collide.cpp" "Double dispatching/collide.h" "Comments server/comment_server.h" "Comments server/comment_server.cpp" Polynomial/polynomial.h Polynomial/polynomial_test.h profile.h "Lazy value/lazyvalue.h" "Lazy value/lazyvalue_test.h" "Double dispatching/collide_test.h" "Comments server/comment_server_test.h" "Object pool/objectpool.h" "Object pool/objectpool_test.h" ConcurrentMap/concurrentmap.h Synchronized/synchronized.h Synchronized/synchronized_test.h Pipeline/pipeline.h Pipeline/pipeline_test.h Textures/common.h Textures/textures.h Textures/textures.cpp Textures/test_textures.h Textures/common.cpp Textures/canvas.h "Tree expression/common.h" "Tree expression/test_expression.h" Cache/common.h Cache/common.cpp Cache/library.h Cache/test_cache.h)